--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
 			"app/controllers",
 			"app/models",
 			"app/libraries",
+			"app/repositories",
 			"app/database/migrations",
 			"app/database/seeds",
 			"app/tests/TestCase.php"
